# decades-ppandas

./: .gitignore  environment.yaml  environment.yml  pyproject.toml  setup.py
pod/: __init__.py
ppodd/: __init__.py
ppodd/cli/: check_version.py  publish.py  release.py
ppodd/decades/: __init__.py  attributes.py  attrutils.py  backends.py  dataset.py  decades.py  file.py  flags.py  globals.py  process.py  uncertainty.py  utils.py  variable.py
ppodd/decades/process/: __init__.py  decades.py  protocol.py
ppodd/docs/: Makefile  conf.py  index.rst  preproc.py
ppodd/docs/base_rst/: coredata_base.rst
ppodd/docs/code/: Makefile  conf.py  doc.rst  extending.rst  flight-constants.csv  flight_constants.rst  index.rst  introduction.rst  usage.rst
ppodd/docs/code/static/: mods.css
ppodd/docs/content/: intro.rst
ppodd/docs/data/: Makefile  conf.py  index.rst  preproc.py
ppodd/docs/data/base_rst/: coredata_base.rst  flagmods_base.rst  modules_base.rst
ppodd/docs/static/: mods.css
ppodd/exceptions/: messages.py
ppodd/flags/: __init__.py  base.py  p_cpc.py  p_nephelometer.py  p_rosemount_temps.py  p_wvss2.py  p_wvss2_rh.py
ppodd/pod/: __init__.py  base.py  c_winds.pyx  p_2b_ozone.py  p_airspeed.py  p_al52co.py  p_al55co.py  p_bbr_flux.py  p_bbr_sols.py  p_buck.py  p_cabin_pressure.py  p_cabin_temp.py  p_ccn.py  p_ccn_geo.py  p_cpc.py  p_dry_mach.py  p_electric_field.py  p_fast_temp.py  p_fgga.py  p_fgga_ames.py  p_fgga_geo.py  p_general_eastern.py  p_gin.py  p_heimann.py  p_moist_mach.py  p_nephelometer.py  p_nevzorov.py  p_prt_temps.py  p_prt_temps_old.py  p_prt_uncertainties.py  p_psap.py  p_pyrgeometer.py  p_radalt.py  p_recovery_factor.py  p_rio_rvsm.py  p_rio_wow.py  p_rosemount_temps.py  p_rvsm.py  p_s10_pressure.py  p_s9_pressure.py  (+22 more)
ppodd/qa/: __init__.py  base.py  qa_2b_ozone.py  qa_al52co.py  qa_al55co_cals.py  qa_al55co_diags.py  qa_bbr.py  qa_cabin.py  qa_cpc.py  qa_gin.py  qa_humidity.py  qa_jci140.py  qa_neph.py  qa_nevzorov.py  qa_psap.py  qa_static_p.py  qa_teio3.py  qa_teiso2_v2.py  qa_teiso2_v2_zero.py  qa_temperature.py  qa_turb.py
ppodd/readers/: __init__.py  ccn.py  fgga.py  readers.py  sea.py
ppodd/readers/sea/: datatypes.py  parser.py  reader.py  utils.py
ppodd/report/: __init__.py  overview.py  tex.py
ppodd/standard/: __init__.py  globals.yaml  standards.yaml  variable_attrs.yaml
ppodd/standard/core/: __init__.py  global_attrs.yaml  variable_attrs.yaml
ppodd/tests/: run_tests  test_attributes.py  test_decades.py  test_metadata.py  test_moduledocs.py  test_testdata.py
ppodd/utils/: __init__.py  asmm.py  calcs.py  compliance.py  constants.py  conversions.py  utils.py
ppodd/writers/: writers.py
tests/: test_decades.py  test_metadata.py  test_testdata.py
(+5 files in other folders)
