[tool.poetry]
name = "ppodd"
version = "24.5.0"
description = "Postprocessing of DECADES Data"
authors = ["Dave Sproson <dave.sproson@faam.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "^2.2.3"
scipy = "^1.14.1"
faam-data = {git = "https://github.com/FAAM-146/faam-data", develop = true}
lxml = "^5.3.0"
pysolar = "^0.11"
matplotlib = ">=3.8,<3.9"
basemap = "^1.4.1"
fpdf = "^1.7.2"
pylatex = "^1.4.2"
cartopy = "^0.24.1"
requests = "^2.32.3"
urllib3 = "^2.2.3"
google-auth-oauthlib = "^1.2.1"
google-api-python-client = "^2.154.0"
sphinx = ">=7" 
sphinx-rtd-theme = ">2.0,<3.0"
ruamel-yaml = "^0.18.6"
gribgrab = {git = "https://github.com/davesproson/gribgrab"}
faam-vocal = {git = "https://github.com/FAAM-146/vocal"}
sphinxnotes-strike = "^1.2.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
pandas-stubs = "^2.2.3.241126"
types-python-dateutil = "^2.9.0.20241003"
types-beautifulsoup4 = "^4.12.0.20241020"
scipy-stubs = "^1.14.1.5"
types-pyyaml = "^6.0.12.20240917"
lxml-stubs = "^0.5.1"
types-requests = "^2.32.0.20241016"
types-fpdf2 = "^2.8.1.20241204"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
