[project]
name = "ppodd"
version = "25.0.0"
description = "Postprocessing of DECADES Data"
authors = [{ name = "Dave Sproson", email = "dave.sproson@faam.ac.uk" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "pandas>=2.2.3,<3",
    "scipy>=1.14.1,<2",
    "faam-data",
    "lxml>=5.3.0,<6",
    "pysolar>=0.11,<0.12",
    "matplotlib>=3.8,<3.9",
    "basemap>=1.4.1,<2",
    "fpdf>=1.7.2,<2",
    "pylatex>=1.4.2,<2",
    "cartopy>=0.24.1,<0.25",
    "requests>=2.32.3,<3",
    "urllib3>=2.2.3,<3",
    "google-auth-oauthlib>=1.2.1,<2",
    "google-api-python-client>=2.154.0,<3",
    "sphinx>=7",
    "ruamel-yaml>=0.18.6,<0.19",
    "gribgrab",
    "faam-vocal",
    "sphinxnotes-strike>=1.2.1,<2",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0,<2",
    "pandas-stubs>=2.2.3.241126,<3",
    "types-python-dateutil>=2.9.0.20241003,<3",
    "types-beautifulsoup4>=4.12.0.20241020,<5",
    "scipy-stubs>=1.14.1.5,<2",
    "types-pyyaml>=6.0.12.20240917,<7",
    "lxml-stubs>=0.5.1,<0.6",
    "types-requests>=2.32.0.20241016,<3",
    "types-fpdf2>=2.8.1.20241204,<3",
]

[tool.uv]

[tool.uv.sources]
faam-data = { git = "https://github.com/FAAM-146/faam-data" }
gribgrab = { git = "https://github.com/davesproson/gribgrab" }
faam-vocal = { git = "https://github.com/FAAM-146/vocal" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
